--- a/web/src/index.css
+++ b/web/src/index.css
@@ -16,3 +16,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.footer {
+  margin-top: auto;
+  width: 100%;
+}
